# suzumina.click

./: .clinerules  .coderabbit.yaml  .cspell.json  .deepsource.toml  .dockerignore  .env.local.example  .firebaserc  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mcp.json  .secretlintignore  .secretlintrc.json  .worktreeinclude  BIOME_MIGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  DLSITE_API_ANALYSIS.md  PROJECT_ANALYSIS.md  README.md  biome.json  bunfig.toml  cloudbuild.yaml  create_secrets.sh  debug-homepage.js  debug-salescount.js  drizzle.config.ts  firebase.json  firestore.indexes.json  firestore.rules  knip.json  lefthook.yml  mise.toml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pull_request.md  skaffold.yaml  turbo.json  (+2 more)
.claude/: launch.json  settings.json
.design-sync/: NOTES.md  config.json  conventions.md  sync.tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  renovate.json
.storybook/: mock.ts  preview.ts
apps/functions-python/: Dockerfile  pyproject.toml  requirements.txt
apps/functions-python/src/: main.py
apps/functions-python/src/api/: hello.py  youtube.py
apps/functions-python/src/lib/: youtube_api.py
apps/functions-python/src/utils/: error_handler.py
apps/functions-python/test/: test_youtube_api.py
docs/: API_ROUTES_ANALYSIS_AND_MIGRATION_PLAN.md  ARCHITECTURE_DESIGN.md  AUDIO_BUTTON_DESIGN.md  AUDIO_BUTTON_IMPLEMENTATION.md  AUDIO_BUTTON_OPTIMIZATION.md  AUDIO_BUTTON_PLAN.md  AUDIO_BUTTON_UX_IMPROVEMENT_PLAN.md  AUDIO_CLIP_DESIGN.md  AUDIO_PLAYER_SIMPLIFICATION.md  AUTH.md  AUTH_DEPLOYMENT_GUIDE.md  AUTH_DESIGN.md  (+115 more)
(+1877 files in other folders)
